--- a/Framework/all.css
+++ b/Framework/all.css
@@ -67,6 +67,7 @@
 			border: 1px solid #CCCCCC;
 			border-radius: 5px;
 			-moz-border-radius: 5px;
+			margin: 3px;
 		}
 		
 		.search_module input{
@@ -77,6 +78,7 @@
 			height: 30px;
 			font-size: 16px;
 			border: 0px;
+			background-color: transparent;
 		}
 		
 		.search_module button{
