--- a/Framework/all.css
+++ b/Framework/all.css
@@ -139,6 +139,67 @@
 
 /* This is the beginning of the AtlasUI Browser Interaction styling */
 
+.atlasui_notification
+{
+	width:300px;
+	height:150px;
+	background: white;
+	border: 2px solid #CCCCCC;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	z-index: 5;
+	animation: notify 10s;
+	-moz-animation: notify 10s; /* Firefox */
+	-webkit-animation: notify 10s; /* Safari and Chrome */
+	opacity: 0;
+}
+
+#atlasui_notification_title{
+	width: 90%;
+	height: 24px;
+	margin: 5px;
+	float: left;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	line-height: 24px;
+	border-bottom: 1px solid #eeeeee;
+	color: #0099ff; 
+}
+
+#atlasui_notification_message{
+	width: 90%;
+	height: 24px;
+	margin: 10px;
+	float: left;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: black; 
+}
+
+@keyframes notify
+{
+	0% {opacity: 0;}
+	50% {opacity: 1.0;}
+	75% {opacity: 1.0;}
+	100% {opacity: 0;}
+}
+
+@-moz-keyframes notify
+{
+	0% {opacity: 0;}
+	50% {opacity: 1.0;}
+	75% {opacity: 1.0;}
+	100% {opacity: 0;}
+}
+
+@-webkit-keyframes notify
+{
+	0% {opacity: 0;}
+	50% {opacity: 1.0;}
+	75% {opacity: 1.0;}
+	100% {opacity: 0;}
+}
+
 /* This is the end of the AtlasUI Browser Interaction styling */
 
 /* This is the beginning of the Social Network Framework styling */
