--- a/Framework/all.css
+++ b/Framework/all.css
@@ -3,6 +3,7 @@
  
  @import url(http://fonts.googleapis.com/css?family=PT+Sans);
  @import url(http://fonts.googleapis.com/css?family=Droid+Sans);
+ @import url(http://fonts.googleapis.com/css?family=Ubuntu);
 
 /* This is the beginning of the audio and video framework styling */
 
