--- a/Framework/all.css
+++ b/Framework/all.css
@@ -1,255 +1,8 @@
-/* This is the official AtlasUI Web Framework stylesheet
- * The stylesheet will be divided up into different framework / module types */
+/* This is the official AtlasUI Web Framework stylesheet */
  
  @import url(http://fonts.googleapis.com/css?family=PT+Sans);
  @import url(http://fonts.googleapis.com/css?family=Droid+Sans);
  @import url(http://fonts.googleapis.com/css?family=Ubuntu);
-
-/* This is the beginning of the audio and video framework styling */
-
-	.cc_button{
-		font-size: 12px;
-	}
-	
-	.cc_button a{
-		color: #0099ff;
-		text-decoration: none;
-	}
-	
-/* This is the end of the audio and video framework styling */
-
-/* This is the beginning of the AtlasUI Main Module styling */
-
-	/* Contact Form */
-	
-		.atlasui_contact_form{
-			
-		}
-		
-		.atlasui_contact_form button{
-			margin-top: 10px;
-			font-size: 18px;
-			text-align: center;
-			width: 100px;
-			border: 1px solid #CCCCCC;
-			background-color: #FAFAFA;
-			border-radius: 10px;
-			height: 32px;
-			line-height: 28px;
-			color: #0099ff;
-			float: right;
-			font-family: "PT Sans", sans-serif;
-		}
-		
-		.atlasui_contact_form input{
-			width: 100%;
-			height: 32px;
-			float: left;
-			font-size: 18px;
-			line-height: 32px;
-			margin-top: 5px;
-			background-color: #FAFAFA;
-			border: 1px solid #CCCCCC;
-			border-radius: 10px;
-			-moz-border-radius: 10px;
-			color: #333333;
-			text-indent: 5px;
-			float: left;
-			font-family: "PT Sans", sans-serif;
-		}
-		
-		.atlasui_contact_form textarea{
-			min-width: 100%;
-			min-height: 100px;
-			max-height: 100px;
-			max-width: 100%;
-			resize: none;
-			float: left;
-			border: 1px solid #CCCCCC;
-			background-color: #FAFAFA;
-			border-radius: 10px;
-			-moz-border-radius: 10px;
-			font-size: 18px;
-			line-height: 28px;
-			text-indent: 5px;
-			color: #333333;
-			overflow-y: auto;
-			font-family: "PT Sans", sans-serif;
-			margin-top: 10px;
-		}
-		
-	/* Menubar */
-	
-		.dark_menubar{
-			width: 95%;
-			float: left;
-			margin-left: 2.5%;
-			margin-right: 2.5%;
-			height: 40px;
-			overflow: hidden;
-			background: -webkit-linear-gradient(top, #666666, #000000);
-			background: -moz-linear-gradient(top, #666666, #000000);
-			background: -ms-linear-gradient(top, #666666, #000000);
-			background: -o-linear-gradient(top, #666666, #000000);
-			background-color: #333333;
-			border-radius: 5px;
-			-moz-border-radius: 5px;
-		}
-		
-		.dark_menubar a{
-			width: auto;
-			font-family: 'PT Sans', sans-serif;
-			font-size: 20px;
-			color: white;
-			line-height: 40px;
-			height: 40px;
-			margin-left: 2.5%;
-			text-decoration: none;
-		}
-		
-	/* Modules */
-	
-
-		.elegant_module{
-			
-			border: 1.75px solid #0099ff;
-			border-radius: 7.5px;
-			-moz-border-radius: 7.5px;
-			background-color: white;
-			
-		}
-		
-		.elegant_module label{
-			
-			width: 99%;
-			height: 32px;
-			margin: 0.5%;
-			background-image: url("images/elegant_module_top.png");
-			background-repeat: repeat-x;
-			color: #333333;
-			font-size: 20px;
-			line-height: 32px;
-			text-indent: 5px;
-			border-radius: 5px 5px 0px 0px;
-			-moz-border-radius: 5px 5px 0px 0px;
-			float: left;
-			font-family: 'PT Sans', sans-serif;
-		}
-		
-		.minimalistic_module{
-			
-			border: 1px solid #CCCCCC;
-			border-radius: 5px;
-			-moz-border-radius: 5px;
-			background-color: white;
-			
-		}
-		
-		.minimalistic_module label{
-			
-			width: 98%;
-			height: 24px;
-			margin: 1%;
-			background-color: white;
-			color: #666666;
-			font-size: 18px;
-			line-height: 24px;
-			float: left;
-			
-		}
-	
-	/* End Modules */
-	
-	/* Search */
-	
-		.search_module{
-			min-width: 250px;
-			width: auto;
-			height: 32px;
-			float: left;
-			position: inherit;
-			border: 1px solid #CCCCCC;
-			border-radius: 10px;
-			-moz-border-radius: 10px;
-			margin: 3px;
-		}
-		
-		.search_module input{
-			float: left;
-			width: auto;
-			height: 30px;
-			font-size: 14px;
-			border: 0px;
-			background-color: transparent;
-			font-family: 'Droid Sans', sans-serif;
-			color: #333333;
-		}
-		
-		.search_module button{
-			min-width: 75px;
-			width: auto;
-			max-width: 120px;
-			height: 32px;
-			float: right;
-			border-left: 1px solid #CCCCCC;
-			border-top: 0px;
-			border-right: 0px;
-			border-bottom: 0px;
-			background-color: transparent;
-			text-align: center;
-			line-height: 30px;
-			color: #333333;
-			font-size: 14px;
-			font-family: 'Droid Sans', sans-serif;
-		}
-	/* End Search */
-	
-	/* Topbar */
-	
-		.elegant_topbar{
-			
-			width: 100%;
-			float: left;
-			min-height: 32px;
-			height: 50px;
-			top: 0px;
-			left: 0px;
-			right: 0px;
-			margin-top: 0px;
-			margin-left: 0px;
-			margin-right: 0px;
-			margin-bottom: 10px;
-			padding: 0px;
-			z-index: 100;
-			position: fixed;
-			border-bottom: 1px solid #0099ff;
-			background-color: #666666;
-			color: white;
-		}
-		
-		.minimalistic_topbar{
-			
-			width: 100%;
-			float: left;
-			min-height: 32px;
-			height: 50px;
-			top: 0px;
-			left: 0px;
-			right: 0px;
-			margin-top: 0px;
-			margin-left: 0px;
-			margin-right: 0px;
-			margin-bottom: 10px;
-			padding: 0px;
-			z-index: 100;
-			position: fixed;
-			border-bottom: 2px solid #CCCCCC;
-			color: #666666;
-			background-color: #ffffff;
-		}
-	/* End Topbar */
-	
-/* This is the end of the AtlasUI Main Module styling */
 
 /* This is the beginning of the AtlasUI Browser Interaction styling */
 
@@ -319,21 +72,4 @@
 
 /* End of Browser Notification CSS */
 
-/* YMP-Install Button CSS */
-
-.ymp_install{
-	width: 162px;
-	height: 46px;
-	background-image: url("http://en.opensuse.org/images/f/f1/Oneclick.png");
-	text-decoration: none;
-	float: left;
-	font-family: 'Droid Sans', sans-serif;
-}
-
-/* End of YMP-Install Button CSS */
-
 /* This is the end of the AtlasUI Browser Interaction styling */
-
-/* This is the beginning of the Social Network Framework styling */
-
-/* This is the end of the Social Network Framework styling */
